fixed overflow issue

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -11,3 +11,7 @@
   margin-top: -48px;
   margin-bottom: 15px;
 }
+
+.category-list .category .subcategories {
+  margin-left: 0;
+}
